--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ p{
 .header-section h1{
     font-size: 60px;
     font-weight: 400;
-    left: 5%;
+    left: 15%;
     margin: 20px auto;
     position: absolute;
     top: 35%;
@@ -38,32 +38,37 @@ p{
 .header-section h2{
     font-size: 40px;
     font-weight: 700;
-    margin: 30px 40px;
-    
+    top: 0%;
+    left: 10%;
+    position: relative;
 }
 .header-section h4{
     font-size: 20px;
     font-weight:200;
-    left: 30%;
+    left: 40%;
     top: 50%;
     position: absolute;
-    width: 60%;
+    width: 35%;
 }
 .header-section button{
     border-radius: 50px;
-    border: none;
+    border: 2px solid white;
     cursor: pointer;
     color: red;
     font-family: 'Ubuntu',sans-serif;
     font-size: 18px;
     font-weight: 700;
     height: 50px;
-    left: 35%;
+    left: 45%;
     margin-right: 10px;
     padding: 10px;
     position: relative;
     top: 50%;
-    width: 140px;
+    width: 150px;
+}
+.header-section button:hover{
+    background: none;
+    color: #fff;
 }
 #learn-btn{
     border: 2px solid white;
@@ -71,7 +76,9 @@ p{
     color: white;
 }
 #learn-btn:hover{
-    /* background: none; */
+    border: none;
+    background: #fff;
+    color: red;
 }
 
 nav{
@@ -87,7 +94,7 @@ nav{
     display: inline;
     position: relative;
     top: 25px;
-    left: 195px;
+    left: 25%;
     
 }
 
@@ -96,17 +103,17 @@ nav{
     cursor: pointer;
     font-family: 'Ubuntu',sans-serif;
     font-weight: 600;
-    margin: 0px 15px 50px 15px;
+    margin: 5px 15px 50px 0px;
 }
 
 .login-options{
     position: relative;
-    left: 40vw;
+    left: 30vw;
     margin-right: 20px;
 }
 .login-options button{
     bottom: 15px;
-    border: none;
+    border: 2px solid white;
     right: 0%;
     left: 0%;
     margin: 0;
@@ -117,32 +124,3 @@ nav{
     float: left;
 }
 
-
-/* .header-section li{
-    margin: 20px 20px;
-} */
-
-/* 
-.other-options{
-display: flex;
-    flex-direction: row;
-    height: 20px;
-    left: 0px;
-    list-style: none;
-    margin: 0;
-    position: relative;
-    text-align: center;
-    width: 30%;
-}
-    .login-options{
-    display: flex;
-    flex-direction: row;
-    height: 20px;
-    list-style: none;
-    position: relative;
-    width: 20%;
-    margin: 0px auto;
-    left: 90%;
-}
-    
-    */
