--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,9 @@ body{
 }
 
 h1,h2,h3,h4{
-    font-family: 'Ubuntu',sans-serif;
+    font-family: 'Overpass',sans-serif;
+    /* font-size: 40px; */
+    font-weight: 400;
     width: 20%;
 }
 p{
@@ -133,6 +135,7 @@ nav{
 .mid-section h2{
     font-size: 40px;
     font-family: 'Overpass',sans-serif;
+    font-weight: 600;
     left: 60%;
     position: relative;
     top: 10%;
@@ -160,8 +163,101 @@ nav{
 }
 
 .editor-content h3{
-    font-size: 25px;
-    font-weight: 500;
+    font-size: 30px;
+    font-weight: 600;
+    position: relative;
+    text-align: justify;
+    width: 75%;
+}
+
+/* Details section */
+.details-section{
+    background-image: url('/images/bg-pattern-circles.svg');
+    background-repeat: no-repeat;
+    background-position: bottom left;
+    background-size: 55%;
+    background-color: hsl(235, 21%, 23%); 
+    border-radius: 0px 100px 0px 0px;
+    color: #fff;
+    height: 60vh;
+    margin-bottom: 15%;
+    margin-top: 5%;
+    position: relative;
+    
+}
+.details-section p,h2{
+    left: 50%;
+    position: relative;
+    top: 20%;
+    width: 45%;
+}
+
+.details-section p{
+    color: rgb(185, 183, 183);
+    height: 40%;
+    line-height: 30px;
+    position: relative;
+    width: 35%;
+}
+
+.details-section h2{
+    font-size: 35px;
+    font-weight: 600;
+    top: 25%;
+    margin: 0px 0px 50px 0px;
+    position: relative;
+}
+
+.details-section img{
+    height: 550px;
+    width: 550px;
+    bottom: -100px;
+    left: 20px;
+    position: absolute;
+}
+
+/* editor content */
+
+.more-details-section{
+    position: relative;
+    text-align: center;
+    height: 110vh;
+    padding: 30px;
+    width: 50vw;
+}
+
+.more-details-section h2{
+    font-size: 40px;
+    font-family: 'Overpass',sans-serif;
+    left: 60%;
+    position: relative;
+    top: 10%;
+    width: 70%;
+}
+.more-details-section img{
+    position: absolute;
+    right: 15%;
+    height: 800px;
+    bottom: 5%;
+}
+.more-details-content{
+    color: rgb(30, 26, 54);
+    left: 90%;
+    height: 60vh;
+    padding: 10px;
+    position: relative;
+    top: 8%;
+}
+.more-details-content p {
+    font-size: 15px;
+    line-height: 30px;
+    text-align: justify;
+    width: 70%;
+}
+
+.more-details-content h3{
+    font-size: 30px;
+    font-weight: 600;
     position: relative;
     text-align: justify;
     width: 60%;
